--- a/static/index.html
+++ b/static/index.html
@@ -1,15 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <title>Evan McPheron</title>
-</head>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap"
+			rel="stylesheet"
+		/>
+		<title>Evan McPheron</title>
+	</head>
 
-<body>
-  <div class="app-wrapper"></div>
-</body>
-
+	<body>
+		<div class="app-wrapper">LOADING...</div>
+	</body>
 </html>
