--- a/static/index.html
+++ b/static/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<link
-			href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap"
-			rel="stylesheet"
-		/>
-		<title>Evan McPheron</title>
-	</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap"
+            rel="stylesheet"
+        />
+        <title>Evan McPheron</title>
+    </head>
 
-	<body>
-		<div class="app-wrapper">LOADING...</div>
-	</body>
+    <body>
+        <div class="app-wrapper">LOADING...</div>
+    </body>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=UA-80246531-2"
+    ></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-80246531-2');
+    </script>
 </html>
